# TTFParser

./: CMakeLists.txt  Roboto.dump  benchmark.sh
include/: CMAPTable.h  Font.h  Glyph.h  HEADTable.h  Header.h  Point.h  PointFlag.cpp  PointFlag.h  TableHeader.h  log.h  util.h
src/: CMAPTable.cpp  Font.cpp  Glyph.cpp  HEADTable.cpp  Header.cpp  Point.cpp  PointFlag.cpp  TableHeader.cpp  log.cpp  log.h  main.cpp  util.cpp
